@@ -1,0 +1,7 @@
+package IntApp::View::ByCode;
+
+use strict;
+use warnings;
+use parent 'Catalyst::View::ByCode';
+
+1;
